# invoices-platform

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLANS.md  README.md  gmail_invoice_finder.v1.0.py  graph_invoice_finder.v3.1.py  graph_invoice_finder.v3.4.py  graph_invoice_finder.v3.5.py  graph_invoice_finder.v3.6.2.py  graph_invoice_finder.v3.6.3.py  graph_invoice_finder.v3.7.4.py  graph_invoice_finder.v3.8.py  pytest.ini  requirements.txt  search_filter_outlook.v1.json  search_filter_outlook.v2.json
.ai/: README.md  task-packet-template.md
.devcontainer/: Dockerfile  devcontainer.json
apps/workers-py/: Makefile  pyproject.toml  requirements.txt
apps/workers-py/src/invplatform/: __init__.py
apps/workers-py/src/invplatform/adapters/: __init__.py  base.py
apps/workers-py/src/invplatform/cli/: __init__.py  gmail_invoice_finder.py  graph_invoice_finder.py  invoices_report.py  meta_billing_export.py  monthly_invoices.py  quarantine_invoices.py
apps/workers-py/src/invplatform/domain/: __init__.py  constants.py  files.py  pdf.py  relevance.py
apps/workers-py/src/invplatform/usecases/: __init__.py  fetch_invoices.py
apps/workers-py/src/workers/: download_invoice.py  example_worker.py
apps/workers-py/tests/: test_example.py
archive/: bezeq_invoice_fetcher.v3.8.1.py  bezeq_invoice_fetcher.v3.8.2.py  bezeq_invoice_fetcher.v3.8.3.py  bezeq_invoice_fetcher.v3.8.4.py  bezeq_invoice_fetcher.v3.8.5.py  bezeq_invoice_fetcher.v3.8.6.py  bezeq_invoice_fetcher.v3.8.7.py  bezeq_invoice_fetcher.v3.8.py  claude.v1.0.py  (+21 more)
(+149 files in other folders)
