[project]
name = "workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "pydantic>=2",
  "tenacity",
  "python-dotenv",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pdfminer.six",
  "pypdf",
  "rapidfuzz"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
